--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Clocktime" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;1,400;1,600&display=swap"
+			rel="stylesheet"
+		/>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
