--- a/public/index.html
+++ b/public/index.html
@@ -42,17 +42,12 @@
 	-->
 	</body>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script
-		async
-		src="https://www.googletagmanager.com/gtag/js?id=UA-177317078-1"
-	></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XD8QQMRPRP"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag("js", new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-		gtag("config", "UA-177317078-1");
+	gtag('config', 'G-XD8QQMRPRP');
 	</script>
 </html>
